--- a/client/src/App.css
+++ b/client/src/App.css
@@ -129,6 +129,63 @@ button {
   width: 35rem;
 }
 
+@media only screen and (width < 1369px) {
+  .meet-main {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .meet-text h1 {
+    padding-top: 0;
+  }
+
+  .skills {
+    margin-top: 5rem;
+  }
+}
+
+@media only screen and (width < 1365px) {
+  .contact-row {
+    justify-content: center;
+  }
+}
+
+@media only screen and (width < 940px) {
+  .photoOfAiden {
+    height: 13rem; /* change me to your needs */
+    width: 13rem;
+    background-position: 0%;
+  }
+
+  .content div {
+    gap: 0;
+  }
+
+  .meet-text .position {
+    font-size: 2em;
+  }
+}
+
+@media only screen and (width < 950px) {
+  .meet-text h2 {
+    font-size: 3rem;
+    line-height: 1.2;
+  }
+}
+
+@media only screen and (width < 600px) {
+  .services .container {
+    padding: 0 3rem;
+    margin: auto 0;
+  }
+
+  .meet .container {
+    padding: 0;
+    margin: auto 0;
+  }
+}
+
 /* stylelint-disable-next-line media-feature-range-notation */
 @media (max-width: 900px) {
   .content {
@@ -172,7 +229,10 @@ a .fa-github {
 .container {
   margin: 0 auto;
   max-width: 107rem;
-  padding: 0 10rem;
+  padding-left: 10rem;
+  padding-right: 10rem;
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 /****** MARGIN FOR WEBSITE ********/
@@ -196,7 +256,7 @@ a .fa-github {
   margin-bottom: 20px;
 }
 
-.meet-text h1 {
+.meet-text h2 {
   font-size: 5.5rem;
   line-height: 1.2;
   margin-bottom: 2rem;
