--- a/client/src/Skills.css
+++ b/client/src/Skills.css
@@ -30,27 +30,48 @@
   }
 }
 
-@media only screen and (width < 1037px) {
+@media only screen and (width < 1229px) {
   .image-container {
     flex: 0 0 calc(25% - 1rem); /* 4 items per row */
   }
 }
 
-@media only screen and (width < 700px) {
+@media only screen and (width < 925px) {
   .image-container {
     flex: 0 0 calc(33.3333% - 1rem); /* 3 items per row */
   }
 }
 
-@media only screen and (width < 400px) {
+@media only screen and (width < 734px) {
   .image-container {
     flex: 0 0 calc(50% - 1rem); /* 2 items per row */
   }
 }
 
-@media only screen and (width < 300px) {
+@media only screen and (width < 500px) {
   .image-container {
-    flex: 0 0 calc(100% - 1rem); /* 1 item per row */
+    flex: 0 0 calc(50% - 1rem); /* 2 items per row */
+  }
+}
+
+/* 
+
+@media only screen and (width < 350px) {
+  .image-container {
+    flex: 0 0 calc(100% - 1rem); // 1 item per row 
+  }
+} 
+*/
+
+@media only screen and (width < 1377px) {
+  h1 {
+    margin-top: 55rem;
+  }
+}
+
+@media only screen and (width < 950px) {
+  h1 {
+    margin-top: 35rem;
   }
 }
 
