--- a/client/src/Project.css
+++ b/client/src/Project.css
@@ -16,3 +16,14 @@
   background: white;
   transition: background-color 0.6s ease;
 }
+
+.title {
+  margin-left: 1rem;
+  color: white;
+  font-size: 3rem;
+  cursor: pointer;
+}
+
+.title:hover {
+  color: #0088a9;
+}
