--- a/client/src/About.css
+++ b/client/src/About.css
@@ -5,3 +5,32 @@ h1 {
   margin-left: auto;
   color: white;
 }
+
+@keyframes morph {
+  0% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+
+  50% {
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
+
+  100% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  }
+}
+
+.photoOfAidenInRecordStore {
+  animation: morph 8s ease-in-out infinite;
+  background-image: url('./images/photoOfAidenRecordStore.JPG');
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 3px solid white;
+  border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+  height: 30rem; /* change me to your needs */
+  position: relative;
+  transition: all 1s ease-in-out;
+  width: 37rem;
+  cursor: pointer;
+}
