--- a/client/src/App.css
+++ b/client/src/App.css
@@ -280,6 +280,7 @@ a .fa-github {
 .meet-main {
   align-items: center;
   display: flex;
+  flex-direction: row-reverse;
   gap: 2rem;
   justify-content: center;
   position: relative;
