adding mobile view for footer section

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -208,6 +208,11 @@ button {
     padding: 0 1rem;
     margin: auto 0;
   }
+
+  .footer .container {
+    padding: 0 1rem;
+    margin: auto 0;
+  }
 }
 
 .bars-icon {
