--- a/client/src/About.css
+++ b/client/src/About.css
@@ -34,3 +34,38 @@ h1 {
   width: 37rem;
   cursor: pointer;
 }
+
+.about-container {
+  align-items: center;
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+  position: relative;
+  color: white;
+  margin-bottom: 20px;
+  margin-top: 4rem;
+}
+
+@media only screen and (width < 600px) {
+  .photoOfAidenInRecordStore {
+    height: 15rem; /* change me to your needs */
+    width: 15rem;
+    background-position: 0%;
+    margin-top: 1rem;
+    margin-right: 5rem;
+    margin-left: 5rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    margin-top: 0;
+  }
+
+  .about-container {
+    flex-direction: column-reverse;
+    align-items: center;
+    text-align: center;
+    margin-top: 0;
+  }
+}
