--- a/client/src/App.css
+++ b/client/src/App.css
@@ -149,6 +149,7 @@ button {
 
   .skills {
     margin-top: 5rem;
+    margin-bottom: 0;
   }
 }
 
@@ -204,6 +205,11 @@ button {
     margin: auto 0;
   }
 
+  .about .container {
+    padding: 0 1rem;
+    margin: auto 0;
+  }
+
   .qualifications .container {
     padding: 0 1rem;
     margin: auto 0;
@@ -212,6 +218,10 @@ button {
   .footer .container {
     padding: 0 1rem;
     margin: auto 0;
+  }
+
+  .content {
+    padding-bottom: 0; /* Maintain 1:1 aspect ratio */
   }
 }
 
@@ -238,7 +248,7 @@ button {
     flex-direction: column;
     gap: 3rem;
     height: 0;
-    padding-bottom: 100%; /* Maintain 1:1 aspect ratio */
+    padding-bottom: 35%; /* Maintain 1:1 aspect ratio */
     position: relative;
     text-align: center;
     overflow: hidden;
