--- a/client/src/Projects.css
+++ b/client/src/Projects.css
@@ -5,3 +5,11 @@ h1 {
   margin-left: auto;
   color: white;
 }
+
+@media only screen and (width < 600px) {
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    padding-top: 0;
+  }
+}
