--- a/client/src/Skills.css
+++ b/client/src/Skills.css
@@ -137,7 +137,7 @@
 h1 {
   font-size: 4rem;
   margin-bottom: 1rem;
-  padding-top: 5rem;
+  padding-top: 10rem;
   margin-left: auto;
 }
 
@@ -195,5 +195,10 @@ h1 {
   .figma-logo {
     height: 4rem;
     width: 3rem;
+  }
+
+  h1 {
+    font-size: 2.5rem;
+    text-align: center;
   }
 }
