--- a/src/App.css
+++ b/src/App.css
@@ -222,8 +222,12 @@ button {
   }
 
   .content {
-    padding-bottom: 0; /* Maintain 1:1 aspect ratio */
+    padding-bottom: 0;
   }
+}
+
+Contact {
+  display: block;
 }
 
 .bars-icon {
